feat updated ui as per design guidelines
